--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -2,15 +2,15 @@ version: "2"
 sql:
   - engine: "postgresql"
     queries: "./db/query"
-    schema: "./db/migration"
+    schema: "./db/schema.sql"
+    database:
+      uri: "postgresql://devuser:devpass@localhost:5432/devdb"
     gen:
       go:
         package: "db"
         sql_package: "pgx/v4"
-        # sql_package: "database/sql"
         out: "./db/sqlc"
         emit_interface: true
         emit_json_tags: true
         emit_pointers_for_null_types: true
         emit_result_struct_pointers: true
-        overrides: []
