--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -2,7 +2,7 @@ version: "2"
 sql:
   - engine: "postgresql"
     queries: "./db/query"
-    schema: "./db/schema.sql"
+    schema: "./db/migration"
     database:
       uri: "postgresql://devuser:devpass@localhost:5432/devdb"
     gen:
