--- a/dev.env
+++ b/dev.env
@@ -1,8 +1,10 @@
-DB_USERNAME=
-DB_PASSWORD=
-DB_HOSTNAME=
-DB_PORT=
-DB_DBNAME=
-
-TOKEN_HOUR_LIFESPAN=
-API_SECRET=
+ENVIRONMENT=development
+HOST=0.0.0.0
+PORT=8080
+DB_USERNAME=devuser
+DB_PASSWORD=devpass
+DB_HOSTNAME=localhost
+DB_PORT=5432
+DB_NAME=devdb
+TOKEN_HOUR_LIFESPAN=24
+API_SECRET=your_secret_key
