auth services, need further debuggin

--- a/dev.env
+++ b/dev.env
@@ -6,5 +6,6 @@ DB_PASSWORD=devpass
 DB_HOSTNAME=localhost
 DB_PORT=5432
 DB_NAME=devdb
+JWT_SECRET=askim
 TOKEN_HOUR_LIFESPAN=24
-API_SECRET=your_secret_key
+API_SECRET=jagiya
