--- a/dev.env
+++ b/dev.env
@@ -6,6 +6,6 @@ DB_PASSWORD=devpass
 DB_HOSTNAME=localhost
 DB_PORT=5432
 DB_NAME=devdb
-JWT_SECRET=askim
+JWT_SECRET=askimaskimaskimasecurelongersecret1234
 TOKEN_HOUR_LIFESPAN=24
 API_SECRET=jagiya
