--- a/dev.env
+++ b/dev.env
@@ -3,12 +3,15 @@ HOST=0.0.0.0
 PORT=8080
 DB_USERNAME=devuser
 DB_PASSWORD=devpass
-DB_HOSTNAME=localhost
+DB_HOSTNAME=postgres
 DB_PORT=5432
 DB_NAME=devdb
 JWT_SECRET=askimaskimaskimasecurelongersecret1234
 TOKEN_HOUR_LIFESPAN=24
 API_SECRET=jagiya
 VERSION=1
-
 GIN_MODE=release
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_DB=0
