--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,51 +52,51 @@ services:
       timeout: 5s
       retries: 5
 
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: gin-sqlc-app
-    ports:
-      - "8080:8080"
-    depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      mailhog:
-        condition: service_healthy
-    environment:
-      # Existing environment variables
-      - ENVIRONMENT=development
-      - HOST=0.0.0.0
-      - PORT=8080
-      - DB_USERNAME=devuser
-      - DB_PASSWORD=devpass
-      - DB_HOSTNAME=postgres
-      - DB_PORT=5432
-      - DB_NAME=devdb
-      - JWT_SECRET=askimaskimaskimasecurelongersecret1234
-      - TOKEN_HOUR_LIFESPAN=24
-      - API_SECRET=jagiya
-      - VERSION=1
-      - GIN_MODE=release
-      # Redis environment variables
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - REDIS_PASSWORD=
-      - REDIS_DB=0
-      # Email configuration
-      - SMTP_HOST=mailhog
-      - SMTP_PORT=1025
-      - SMTP_USERNAME=
-      - SMTP_PASSWORD=
-      - SMTP_FROM=no-reply@localhost
-      - SMTP_FROM_NAME=LinkInBio App
-      - SMTP_SECURE=false
-    networks:
-      - app-network
-    restart: on-failure
+  # app:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: gin-sqlc-app
+  #   ports:
+  #     - "8081:8080"
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #     redis:
+  #       condition: service_healthy
+  #     mailhog:
+  #       condition: service_healthy
+  #   environment:
+  #     # Existing environment variables
+  #     - ENVIRONMENT=development
+  #     - HOST=0.0.0.0
+  #     - PORT=8080
+  #     - DB_USERNAME=devuser
+  #     - DB_PASSWORD=devpass
+  #     - DB_HOSTNAME=postgres
+  #     - DB_PORT=5432
+  #     - DB_NAME=devdb
+  #     - JWT_SECRET=askimaskimaskimasecurelongersecret1234
+  #     - TOKEN_HOUR_LIFESPAN=24
+  #     - API_SECRET=jagiya
+  #     - VERSION=1
+  #     - GIN_MODE=release
+  #     # Redis environment variables
+  #     - REDIS_HOST=redis
+  #     - REDIS_PORT=6379
+  #     - REDIS_PASSWORD=
+  #     - REDIS_DB=0
+  #     # Email configuration
+  #     - SMTP_HOST=mailhog
+  #     - SMTP_PORT=1025
+  #     - SMTP_USERNAME=
+  #     - SMTP_PASSWORD=
+  #     - SMTP_FROM=no-reply@localhost
+  #     - SMTP_FROM_NAME=LinkInBio App
+  #     - SMTP_SECURE=false
+  #   networks:
+  #     - app-network
+  #   restart: on-failure
 
 networks:
   app-network:
