--- a/dev.env
+++ b/dev.env
@@ -15,3 +15,14 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=
 REDIS_DB=0
+
+STORAGE_PROVIDER=local
+STORAGE_BASE_PATH=./uploads
+STORAGE_BASE_URL=http://localhost:8081/uploads
+STORAGE_CDN_DOMAIN=
+S3_REGION=us-east-1
+S3_BUCKET=your-bucket-name
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+MAX_FILE_SIZE=52428800     # 50MB
+MAX_AVATAR_SIZE=10485760   # 10MB
